# reface

./: .gitignore  AGENTS.md  Makefile  README.md  Taskfile.yml  compose.yml
reface-api/: package.json  pnpm-lock.yaml  server.ts  tsconfig.json
reface-api/controllers/: auth.controller.ts  process-image.controller.ts  queue.controller.ts  user.controller.ts
reface-api/lib/: constants.ts  passport.ts  queue.ts
reface-api/lib/db/: index.ts  schema.ts  seed.ts
reface-api/middleware/: auth.middleware.ts
reface-api/middlewares/: auth.middleware.ts
reface-api/routes/: auth.routes.ts  process-image.routes.ts  queue.routes.ts  user.routes.ts
reface-api/services/: process-image.service.ts  queue.service.ts  user.service.ts
reface-api/utils/: jwt.ts  validate.ts
reface-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  app.py  celery_app.py  celery_worker.py  cli.py  detect.py  main.ipynb  main.py  pyproject.toml  restore.py  worker.py
reface-backend/core/: config.py  database.py  image_utils.py  models.py
reface-backend/db/: init_db.py  models.py  session.py
reface-backend/lib/: face_swap.py  image_utils.py  utils.py
reface-backend/migrations/: env.py
reface-backend/migrations/versions/: 408efc85d64d_add_storage_and_jobs_tables.py  b42e8e9a3d69_initial.py
reface-backend/modules/face_restore/: codeformer_arch.py  controller.py  schemas.py  service.py  tasks.py
reface-backend/modules/face_swap/: controller.py  schemas.py  service.py  tasks.py
reface-backend/modules/storage/: controller.py  schemas.py  service.py
reface-frontend/: AUTHENTICATION.md  README.md  env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.txt
reface-frontend/src/: App.tsx
reface-frontend/src/api/: fetcher.ts
(+26 files in other folders)
