[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "insightface>=0.7.3",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
]
