[project]
name = "reface-backend"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.30.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "numpy>=2.3.2",
    "sqlalchemy>=2.0.43",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.20",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
restore = [
    "gfpgan>=1.3.8",
    "realesrgan>=0.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
]
