[project]
name = "reface-backend"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "insightface>=1.0.1",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.3.2",
    "sqlalchemy>=2.0.50",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "python-multipart>=0.0.32",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "pydantic-settings>=2.14.1",
    "torch>=2.12.0",
]

# [tool.uv]
# reinstall-package = ["*"]
